my application contrast solved

--- a/src/Components/ApplicationList/ProgressBar.css
+++ b/src/Components/ApplicationList/ProgressBar.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: rgba(255, 0, 0, 0.808);
+    background-color: rgba(255, 0, 0, 0.685);
     width: calc(14.28%);
     height: 100%;
     border-radius: 5px;
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: rgba(255, 94, 0, 0.808);
+    background-color: rgba(255, 94, 0, 0.685);
     width: calc(28.56%);
     height: 100%;
     border-radius: 5px;
@@ -30,7 +30,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: rgba(62, 185, 0, 0.808);
+    background-color: rgba(62, 185, 0, 0.685);
     width: calc(42.84%);
     height: 100%;
     border-radius: 5px;
@@ -44,7 +44,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: rgba(255, 183, 0, 0.808);
+    background-color: rgba(255, 183, 0, 0.685);
     width: calc(57.12%);
     height: 100%;
     border-radius: 5px;
@@ -58,7 +58,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: rgba(62, 185, 0, 0.808);
+    background-color: rgba(62, 185, 0, 0.685);
     width: calc(71.4%);
     height: 100%;
     border-radius: 5px;
@@ -72,7 +72,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: rgba(62, 185, 0, 0.808);
+    background-color: rgba(62, 185, 0, 0.685);
     width: calc(85.68%);
     height: 100%;
     border-radius: 5px;
@@ -86,7 +86,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: rgba(0, 136, 255, 0.808);
+    background-color: rgba(0, 136, 255, 0.685);
     width: calc(100%);
     height: 100%;
     border-radius: 5px;
@@ -103,7 +103,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      background-color: rgba(255, 0, 0, 0.808);
+      background-color: rgba(255, 0, 0, 0.685);
       width: calc(16%);
       height: 100%;
       border-radius: 5px;
@@ -119,7 +119,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      background-color: rgba(255, 94, 0, 0.808);
+      background-color: rgba(255, 94, 0, 0.685);
       width: calc(29.56%);
       height: 100%;
       border-radius: 5px;
@@ -137,7 +137,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      background-color: rgba(62, 185, 0, 0.808);
+      background-color: rgba(62, 185, 0, 0.685);
       width: calc(42.84%);
       height: 100%;
       border-radius: 5px;
@@ -151,7 +151,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      background-color: rgba(255, 183, 0, 0.808);
+      background-color: rgba(255, 183, 0, 0.685);
       width: calc(57.12%);
       height: 100%;
       border-radius: 5px;
@@ -165,7 +165,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      background-color: rgba(62, 185, 0, 0.808);
+      background-color: rgba(62, 185, 0, 0.685);
       width: calc(71.4%);
       height: 100%;
       border-radius: 5px;
@@ -179,7 +179,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      background-color: rgba(62, 185, 0, 0.808);
+      background-color: rgba(62, 185, 0, 0.685);
       width: calc(85.68%);
       height: 100%;
       border-radius: 5px;
@@ -193,7 +193,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      background-color: rgba(0, 136, 255, 0.808);
+      background-color: rgba(0, 136, 255, 0.685);
       width: calc(100%);
       height: 100%;
       border-radius: 5px;
