--- a/src/Components/PortfolioPage/PortfolioPage.css
+++ b/src/Components/PortfolioPage/PortfolioPage.css
@@ -55,6 +55,10 @@
   height: 15%;
   border-bottom: 1px solid #FBF0A2;
 }
+.PorfolioPage-example-item-header a{
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
 
 .PorfolioPage-example-item-image-container {
   width: 100%;
@@ -110,21 +114,14 @@
     gap: 1px;
     text-align: center;
   }
-  .PorfolioPage-example-item-header a{
-    margin-left: 20px;
-    margin-bottom: 15px;
-  }
-  
+
 }
 @media(max-width:700px){
   .portfolio-popup-image{
     width: 95%;
     height: 37%;
   }
-  .PorfolioPage-example-item-header a{
-    margin-left: 20px;
-    margin-bottom: 15px;
-  }
+
 }
 @media(max-width:400px){
   .portfolio-popup-image{
@@ -132,8 +129,5 @@
     height: 33%;
   }
 
-  .PorfolioPage-example-item-header a{
-    margin-left: 20px;
-    margin-bottom: 15px;
-  }
+
 }
